# amazing-app

./: README.md  amazingapp.py  main.py  pyproject.toml  requirements.txt  weather_app.py
