[tool.poetry]
name = "amazing-life"
version = "0.1.0"
description = ""
authors = ["Aviad Rozenhek <aviadr1@gmail.com>"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.47.0"
pandas = "^2.3.1"
numpy = "^1.26.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
